# metal

./: CMakeLists.txt  justfile
app/: CMakeLists.txt  main.cpp
include/: bm.h  bufferGen.h  matMul.h  matMulRunner.h
shaders/: matMul.metal  matMul_tile_broadcast.metal  matMul_tiling_broadcast.metal  matMul_tiling_broadcast_vecRes.metal  matMul_tiling_prototype.metal  vecAdd.metal
src/: CMakeLists.txt  bm.cpp  matMul.cpp  matMulRunner.cpp  vecAdd.cpp
